--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexichat",
+  "name": "bindashchat",
   "description": "A telegram bot",
   "logo": "https://graph.org/file/4565ffe46f5043f95e2a2.jpg",
   "keywords": [
